--- a/package.json
+++ b/package.json
@@ -11,8 +11,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eslint": "^5.16.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
-    "express-handlebars": "^3.1.0"
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.2",
+    "faker": "^4.1.0",
+    "method-override": "^3.0.0",
+    "multer": "^1.4.1",
+    "mysql2": "^1.6.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.8.9",
+    "sequelize-cli": "^5.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.3"
   }
 }
