--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.16.2",
     "faker": "^4.1.0",
     "imgur-node-api": "^0.1.0",
+    "lodash.uniqby": "^4.7.0",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "multer": "^1.4.1",
